# Wernicke

./: CMakeLists.txt  amplituden.gp  energy.gp  gnuplot.gp  main.cpp
lib/: CMakeLists.txt
lib/src/: Criterion.h  NormalDistribution.cpp  NormalDistribution.h  Range.h  Record.cpp  Record.h  RecordPart.cpp  RecordPart.h  SilenceClassificator.cpp  SilenceClassificator.h  Tools.h  WernickeMachine.cpp  WernickeMachine.h
lib/tests/: RecordTest.cpp  ToolsTest.cpp
lib/tests/testfiles/: adrei01.raw  adrei02.raw  adrei03.raw  aeins02.raw  aeins04.raw  afuenf04.raw  afuenf05.raw  anull01.raw  anull02.raw  asechs01.raw  asechs02.raw  asechs03.raw  asechs04.raw  avier01.raw  avier02.raw  avier03.raw  avier04.raw  azwo02.raw  convert.bash  silence.raw
testfiles/: adrei04.raw  adrei05.raw  aeins01.raw  aeins03.raw  aeins05.raw  afuenf01.raw  afuenf02.raw  afuenf03.raw  anull03.raw  anull04.raw  anull05.raw  asechs05.raw  avier05.raw  azwo01.raw  azwo03.raw  azwo04.raw  azwo05.raw
ui/: CMakeLists.txt  LinearDisplay.cpp  LinearDisplay.h  RecordDialog.cpp  RecordDialog.h  RecordDisplay.cpp  RecordDisplay.h  Recorder.cpp  Recorder.h  TwoDimensionDisplay.cpp  TwoDimensionDisplay.h  WernickeMainWindow.cpp  WernickeMainWindow.h  main.cpp
